--- a/src/components/alg/alg-ta/ta2/pages/elem-l7bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l7bdz.html
@@ -19,6 +19,8 @@
   <br><a href="#t1">A. Закраска прямой</a>
   <br><a href="#t2">B. Таможня</a>
   <br><a href="#t3">C. Минимальное покрытие</a>
+  <br><a href="#t4">D. Наполненность котятами</a>
+  <br><a href="#t5">E. Полярные прямоугольники</a>
 </article>
 
 
@@ -156,5 +158,60 @@ No solution
 1
 0 1
 </pre>
+  </details>
+</article>
+
+
+<!-- D. Наполненность котятами -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Наполненность котятами</h3>
+
+  <div class="time-memory">(Время 2с. Память 256мб)</div>
+
+  <p>На прямой в точках a1, a2, …, an (возможно, совпадающих) сидят n котят. На той же прямой лежат m отрезков [l1, r1], [l2, r2], …, [lm, rm]. Нужно для каждого отрезка узнать его наполненность котятами — сколько котят сидит на отрезке.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На первой строке n и m (1 ≤ n, m ≤ 10<sup>5</sup>). На второй строке n целых чисел ai (0 ≤ ai ≤ 10<sup>9</sup>). Следующие m строк содержат пары целых чисел li, ri (0 ≤ li ≤ ri ≤ 10<sup>9</sup>9).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите m целых чисел. i-е число — наполненность котятами i-го отрезка.</p>
+</article>
+
+
+<!-- E. Полярные прямоугольники -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Полярные прямоугольники</h3>
+
+  <div class="time-memory">(Время 5с. Память 64мб)</div>
+
+  <p>Вася недавно изучил полярную систему координат. А именно, он изучил понятие полярного прямоугольника. Пусть задана стандартная декартова плоскость. Если на ней нарисовать две окружности с центром в начале координат, то область, находящаяся между ними, называется кольцом (на рисунке обозначена синим). Если на ней нарисовать два луча, то область, заметаемая первым лучом при движении ко второму, называется углом (т.е. область между этими двумя лучами, на рисунке обозначена зеленым). Полярным прямоугольником называется пересечение некоторого угла с некоторым кольцом (на рисунке обозначено красным).</p>
+
+  <p>Задано несколько полярных прямоугольников. Найдите площадь их пересечения. Помните, что пересечение полярных прямоугольников может состоять из нескольких частей!</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится целое число N — количество прямоугольников (1 ≤ N ≤ 100000). Далее в N строках содержится описание прямоугольников. Каждый прямоугольник описывается четверкой действительных чисел r1, r2, φ1, φ2, где r1, r2 обозначают радиусы окружностей, образующих кольцо (r1 &lt; r2), а φ1, φ2 обозначают углы, образованные первым и вторым лучами с осью абсцисс, заданные в радианах. При этом заметается область от первого луча до второго в направлении против часовой стрелки (т.е. возрастания углов), даже в случае, когда φ1 > φ2. Все числа заданы максимум с шестью знаками после десятичной точки. Углы лежат в полуинтервале [0, 2π), а радиусы не превосходят 10<sup>6</sup>. Гарантируется, что φ1 ≠ φ2.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите единственное число — площадь искомого пересечения. Ответ будет считаться правильным, если его абсолютная или относительная погрешность не будет превышать 10<sup>-6</sup>.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2
+1 3 0 3
+2 4 1.5 4.5
+</pre>
+    <code>3.7500000000</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2
+1 2 0 3
+1 2 2 1
+</pre>
+    <code>3.0000000000</code>
   </details>
 </article>
