--- a/src/components/alg/alg-ta/ta2/pages/elem-l8bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l8bdz.html
@@ -10,3 +10,30 @@
   <p><a href="https://contest.yandex.ru/contest/29403/problems/" target="_blank">contest.yandex.ru/contest/29403/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t0">0. ФИО</a>
+  <br><a href="#t1">A. Бинарное дерево (вставка, поиск, обход)</a>
+</article>
+
+
+<!-- 0. ФИО -->
+<article class="article">
+  <div class="anchor" id="t0"></div>
+  <h3>0. ФИО</h3>
+
+  <p>Введите свою фамилию, имя и отчество (просто текст).</p>
+</article>
+
+
+<!-- A. Бинарное дерево (вставка, поиск, обход) -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Бинарное дерево (вставка, поиск, обход)</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+</article>
+
