--- a/src/components/alg/alg-ta/ta8/pages/elem-r12.html
+++ b/src/components/alg/alg-ta/ta8/pages/elem-r12.html
@@ -4,10 +4,9 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 8.0</strong> (с 2025-09-29 до 2025.10.13)</p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training" target="_blank">yandex.ru/yaintern/training/algorithm-training</a></p>
 
   <h4>Разбор задач 1-2 темы</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
   <p>2025-10-06 Разбор задач 1-2 темы.mp4</p>
 </article>
 
