--- a/src/components/front/front-edu/pages/elem-edu-vgu2024nets.html
+++ b/src/components/front/front-edu/pages/elem-edu-vgu2024nets.html
@@ -8,12 +8,11 @@
 
 
 <article class="article">
-  <p>Платный курс в ВГУ</p>
   <p>(6 декабря 2024 - 28 декабря 2024)</p>
 
   <p>Лекции проходят в главном корпусе ВГУ</p>
-  <p>Аудитории 124 (лаборатория СБЕР) по вт с 17.00 до 20.00, чт,пт с 15.15 до 18.30</p>
-  <p>Преподаватель - Чернышев Максим Корнеевич</p>
+  <p>Аудитория 124 (лаборатория СБЕР) по вт с 17.00 до 20.00, чт,пт с 15.15 до 18.30</p>
+  <p>Преподаватель - Чернышев Максим Карнельевич</p>
   <p>Объем программы 72 часа</p>
 </article>
 
